# OpenSDL

./: .autotools  .cproject  .gitignore  .project  CMakeLists.txt  README.md  build.sh
.externalToolBuilders/: org.eclipse.cdt.managedbuilder.core.genmakebuilder.launch
doc/: .gitignore  CMakeLists.txt  opensdl message.xlsx  opensdl.texi  version.texi
docs/: 4665profile.ps  opensdl.texi
documentation/: CMakeLists.txt  opensdl.texi  user.sdl
include/: opensdl_defs.h
include/lib/lang/: opensdl_plugin.h  opensdl_plugin_funcs.h
include/lib/util/: opensdl_message.h  opensdl_utility.h
include/opensdl/: opensdl_main.h
include/tool/: opensdl_main.h
lib/: CMakeLists.txt
lib/lang/: CMakeLists.txt  opensdl_c.c  opensdl_lang_c.c  opensdl_plugin.c
lib/parser/: CMakeLists.txt  opensdl_lexical.l  opensdl_parser.y
lib/util/: CMakeLists.txt  opensdl_blocks.c  opensdl_message.c  opensdl_utility.c
nbproject/: configurations.xml  project.xml
nbproject/private/: CodeAssistancePathMapper.properties  configurations.xml
opensdl/: CMakeLists.txt  opensdl_main.c
src/: CMakeLists.txt  Makefile  constant.ebnf  copyright.sdl  openSDL.ebnf  opensdl.ebnf  opensdl_actions.c  opensdl_actions.h  opensdl_blocks.c  opensdl_blocks.h  opensdl_defs.h  opensdl_lang.h  opensdl_lang_c.c  opensdl_lexical.l  opensdl_lexical.l.new  opensdl_lexical.l.old  opensdl_listing.c  opensdl_listing.h  opensdl_main.c  opensdl_main.h  opensdl_message.c  opensdl_message.h  opensdl_parser.y  opensdl_parser.y.old  opensdl_queue.h  opensdl_utility.c  opensdl_utility.h
test/: CMakeLists.txt  SDLNODEF.SDL  SDLSHR.SDL  SDLTOKDEF.SDL  STSDEF.SDL  example_1.sdl  example_1_1.sdl  struct_test.c  test_1.sdl  test_2.sdl  test_3.sdl  test_4.sdl  test_5.sdl  test_6.sdl  test_7.h  test_7.sdl  test_8-1.sdl  test_8.sdl  test_9.sdl
tool/: CMakeLists.txt  opensdl_actions.c  opensdl_listing.c  opensdl_main.c
